@@ -3,6 +3,7 @@ package serial;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.util.concurrent.TimeoutException;
 
 import shared.Producer;
 
@@ -16,9 +17,22 @@ public class SerialProducer {
     }
 
     public void produce() throws
-            IOException
+            IOException,
+            TimeoutException
     {
-        String string = Files.readString(Path.of("src/main/java/data/data_100MB"));
-        this.messageProdcuer.produceMessage(string);
+//        String[] pathArray = {
+//                "src/main/java/data/data_100MB",
+//                "src/main/java/data/data_200MB",
+//                "src/main/java/data/data_500MB",
+//                "src/main/java/data/data_1GB",
+//                "src/main/java/data/data_1p5_GB"
+//        };
+//        for (String path : pathArray) {
+//            String content = new String(Files.readAllBytes(Path.of(path)));
+//            this.messageProdcuer.produceMessage(content);
+//        }
+        String content = "content";
+        this.messageProdcuer.produceMessage(content);
+        this.messageProdcuer.closeConnection();
     }
 }
